@@ -9,7 +9,7 @@
 }
 
 \usage{
-\method{pairs}{mlm}(x, variables, type = c("II", "III", "2", "3"), 
+\method{pairs}{mlm}(x, variables, var.labels, type = c("II", "III", "2", "3"), 
 	idata=NULL, idesign=NULL, icontrasts=NULL, imatrix=NULL, iterm=NULL, manova,
   offset.axes = 0.05, digits = getOption("digits") - 1, fill=FALSE, fill.alpha=0.3, ...)
 }
@@ -18,6 +18,8 @@
   \item{x}{an object of class \code{mlm}.}
   \item{variables}{indices or names of the three of more response variables 
     to be plotted; defaults to all of the responses.}
+  \item{var.labels}{labels for the variables plotted in the diagnonal panels;
+    defaults to names of the response variables.}
   \item{type}{``type'' of sum-of-squares-and-products matrices to compute; one of
     \code{"II"}, \code{"III"}, \code{"2"}, or \code{"3"}, where \code{"II"} is
     the default (and \code{"2"} is a synomym).}
